# genius

./: .ghci  .travis.yml  LICENSE  README.md  genius.cabal  stack.yaml
.hpc/: GeniusSpec.mix  Main.mix
bench/: Bench.hs  GeniusBench.hs
src/: Genius.hs  stdlib.gen
src/Genius/: Core.hs  IOPrimitives.hs  Parsers.hs  Primitives.hs  Repl.hs  Types.hs
test/: DocTest.hs  GeniusSpec.hs  HLint.hs
