version:               0.1.0.0
name:                  genius
synopsis:              Genius synopsis.
description:           Genius description.
author:                Médéric Hurier <fmind@users.noreply.github.com>
maintainer:            Médéric Hurier <fmind@users.noreply.github.com>
copyright:             (c) 2017 Médéric Hurier
homepage:              https://github.com/fmind/genius
license:               BSD3
license-file:          LICENSE
extra-source-files:    README.md
category:              Development
build-type:            Simple
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  exposed-modules:     
    Genius
  build-depends:       base >= 4.7 && < 5

executable genius
  hs-source-dirs:      bin
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , genius

test-suite hspec
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -fhpc -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  type:                exitcode-stdio-1.0
  other-modules:     
    GeniusSpec
  build-depends:       base
                     , hspec
                     , genius

test-suite hlint
  hs-source-dirs:      test
  main-is:             HLint.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , hlint
                     , genius

test-suite doctest
  hs-source-dirs:      test
  main-is:             DocTest.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , Glob
                     , doctest
                     , genius

benchmark criterion
  hs-source-dirs:      bench
  main-is:             Bench.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  type:                exitcode-stdio-1.0
  other-modules:     
    GeniusBench
  build-depends:       base
                     , criterion
                     , genius

source-repository head
  type:                git
  location:            https://github.com/fmind/genius
